hid the dashboard section

--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
     </section>
 
     <!-- Dashboard -->
-    <section class="p-5" id="dashboard">
+    <section class="p-5 d-none" id="dashboard">
         <div class="container">
             <nav>
                 <div class="nav nav-tabs" id="nav-tab" role="tablist">
